Nuage qui change d'opacité selon la pollution du pays.

--- a/point/musee/index.html
+++ b/point/musee/index.html
@@ -17,6 +17,7 @@
     <script src="js/lire-csv.js"></script>
     <script src="components/phase-shift.js"></script>
     <script src="components/rafraichissement.js"></script>
+    <script src="components/statue.js"></script>
     <!--
     <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
@@ -137,6 +138,10 @@
         <!-- Models gltf -->
         <a-asset-item id="statuette_v3-gltf" src="model/statuette/statuette_v3.gltf"></a-asset-item>
         <a-asset-item id="balloon-gltf" src="model/balloon/balloon.gltf"></a-asset-item>
+        <!-- Models obj -->
+        <a-asset-item id="bouteille-obj" src="model/bouteille_low_poly/bouteille.obj"></a-asset-item>
+        <a-asset-item id="alcohol-obj" src="model/bouteille_low_poly/alcohol.obj"></a-asset-item>
+        <a-asset-item id="nuage-obj" src="model/nuage/nuage.obj"></a-asset-item>
       </a-assets>
 
       <!-- Les mains -->
