Pièce qui montre tous les statues de compléter. Il y a aussi la cigarette qui se modifie selon les datas du pays.

--- a/point/musee/index.html
+++ b/point/musee/index.html
@@ -19,6 +19,8 @@
     <script src="components/phase-shift.js"></script>
     <script src="components/rafraichissement.js"></script>
     <script src="components/statue.js"></script>
+    <script src="components/pays-selection.js"></script>
+    <script src="components/teleportation-piece.js"></script>
     <!--
 
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.js"></script>
@@ -48,6 +50,9 @@
         <a-asset-item id="alcohol-obj" src="model/bouteille_low_poly/alcohol.obj"></a-asset-item>
         <a-asset-item id="nuage-obj" src="model/nuage/nuage.obj"></a-asset-item>
         <a-asset-item id="money-obj" src="model/money_sign/money_sign.obj"></a-asset-item>
+        <a-asset-item id="cigarette-obj" src="model/cigarette/cigarette.obj"></a-asset-item>
+        <a-asset-item id="cigarette-mtl" src="model/cigarette/cigarette.mtl"></a-asset-item>
+
         <!-- Repère timeline -->
         <a-mixin id="ligneTemps" geometry="height:0.05;width:0.05;depth:0.5"
                  material="color:#ffffff"></a-mixin>
@@ -332,13 +337,12 @@
       <a-entity id="ensembleStatue"></a-entity>
 
       <!-- Environment -->
-      <a-plane position="0 0.001 0" rotation="270 0 0" geometry="width:15;height:15;" material="color:#808080;"></a-plane>
-      <a-cylinder position="0 1.999 0" geometry="radius:8;height:4;openEnded:true;segmentsRadial:4;thetaStart:45"
-                  material="side:back;shader:gradientshader;topColor:#c0c0c0;bottomColor:#ffffff;"></a-cylinder>
-      <a-plane position="0 2.999 0" rotation="90 0 0" geometry="width:15;height:15;" material="color:#c0c0c0;"></a-plane>
-      <a-plane position="0 0.6 0.001" text__nomContinent="value:Americas;align:center;width:25">
-
-      </a-plane>
+      <a-entity id="piece" teleportation-piece="All Countries">
+        <a-plane position="0 0.001 0" rotation="270 0 0" geometry="width:15;height:15;" material="color:#808080;"></a-plane>
+        <a-cylinder position="0 1.999 0" geometry="radius:8;height:4;openEnded:true;segmentsRadial:4;thetaStart:45"
+                    material="side:back;shader:gradientshader;topColor:#c0c0c0;bottomColor:#ffffff;"></a-cylinder>
+        <a-plane position="0 2.999 0" rotation="90 0 0" geometry="width:15;height:15;" material="color:#c0c0c0;"></a-plane>
+      </a-entity>
       <!-- Titre du graphe
       <a-sphere scale="1 1 1" material="repeat:1.0 1.0; src: #gapminder; shader: standard; side: double;"
                 position="-10 2 2.125" rotation="0 90 0" geometry="primitive:circle;radius:1.04">
